# servertui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  apps.example.json  core.py  install.sh  mcp_server.py  pyproject.toml  run.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-08-servertui-apps-panel.md  2026-04-10-mcp-server.md  2026-04-17-installer.md  2026-04-17-multi-env-import.md  2026-05-04-multi-env-files.md
docs/superpowers/specs/: 2026-04-08-servertui-apps-panel-design.md  2026-04-09-git-managed-apps-design.md  2026-04-10-mcp-server-design.md  2026-04-17-installer-design.md  2026-04-17-multi-env-import-design.md  2026-05-04-multi-env-files-design.md
src/servertui/: __init__.py  __main__.py  apps.example.json  cli.py  core.py  init.py  mcp.py  tui.py
