[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servertui"
dynamic = ["version"]
description = "Terminal dashboard for local server infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ilham Farobi" }]
keywords = ["tui", "textual", "docker", "cloudflare", "homelab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=1.0",
    "psutil>=5.9",
    "docker>=7.0",
    "mcp>=1.0",
]

[project.scripts]
servertui = "servertui.cli:main"

[project.urls]
Homepage = "https://github.com/ifarobi/servertui"
Issues  = "https://github.com/ifarobi/servertui/issues"

[tool.hatch.version]
path = "src/servertui/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/servertui"]
